# stock-tui

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  config.example.toml  deny.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml  release.yml
data/: sec_universe.json
docs/: architecture.md  cache-and-sync.md  configuration.md  data-providers.md
src/: app.rs  benchmarks.rs  cli.rs  config.rs  demo.rs  domain.rs  lib.rs  logging.rs  main.rs  palette.rs  runtime.rs  storage.rs  sync.rs  terminal.rs  universe.rs
src/providers/: alpaca.rs  mod.rs
src/ui/: chart.rs  heatmap.rs  layout.rs  mod.rs  render.rs  state.rs
tests/: ui_integration.rs
tools/: build_sec_catalog.py
