[package]
name = "stock-tui"
version = "0.1.1"
edition = "2024"
rust-version = "1.95"
description = "A mouse-first terminal stock market heatmap inspired by StockTouch"
license = "MIT"
repository = "https://github.com/chatcode-lab/stock-tui"
homepage = "https://github.com/chatcode-lab/stock-tui"
documentation = "https://github.com/chatcode-lab/stock-tui#readme"
readme = "README.md"
keywords = ["alpaca", "finance", "stocks", "terminal", "tui"]
categories = ["command-line-utilities", "visualization"]
include = [
  "/.editorconfig",
  "/.env.example",
  "/CHANGELOG.md",
  "/CODE_OF_CONDUCT.md",
  "/CONTRIBUTING.md",
  "/Cargo.lock",
  "/Cargo.toml",
  "/LICENSE",
  "/README.md",
  "/SECURITY.md",
  "/config.example.toml",
  "/data/sec_universe.json",
  "/deny.toml",
  "/docs/**",
  "/rustfmt.toml",
  "/src/**/*.rs",
  "/tests/**/*.rs",
  "/tools/build_sec_catalog.py",
]

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
base64 = "0.22.1"
chrono = { version = "0.4.45", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive", "env"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
directories = "6.0.0"
dotenvy = "0.15.7"
futures-util = "0.3.32"
ratatui = { version = "0.30.2", features = ["palette"] }
reqwest = { version = "0.13.4", default-features = false, features = [
  "gzip",
  "json",
  "query",
  "rustls-no-provider",
] }
rusqlite = { version = "0.40.1", features = ["bundled", "chrono", "serde_json"] }
rustls = { version = "0.23.37", default-features = false, features = ["ring", "std", "tls12"] }
secrecy = "0.10.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = [
  "macros",
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
] }
tokio-util = { version = "0.7.18", features = ["rt"] }
toml = "1.0.7"
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
unicode-width = "0.2.2"
webbrowser = "1.2.0"

[dev-dependencies]
pretty_assertions = "1.4.1"
tempfile = "3.27.0"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
too_many_arguments = "allow"
too_many_lines = "allow"
